--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:layout_width="324dp"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:hint="First Name"
+            android:hint="First Name (required)"
             app:errorEnabled="true"
             app:errorIconDrawable="@null"
             app:layout_constraintBottom_toTopOf="@+id/ccpa_last_name_text_field"
@@ -69,7 +69,7 @@
                 android:id="@+id/ccpa_first_name_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:text="@={formViewModel.firstName}"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -80,7 +80,7 @@
             android:layout_width="324dp"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:hint="Last Name"
+            android:hint="Last Name (required)"
             app:errorEnabled="true"
             app:errorIconDrawable="@null"
             app:layout_constraintBottom_toTopOf="@+id/ccpa_email_text_field"
@@ -94,7 +94,7 @@
                 android:id="@+id/ccpa_last_name_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:text="@={formViewModel.lastName}"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -105,7 +105,7 @@
             android:layout_width="324dp"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:hint="Email"
+            android:hint="Email (required)"
             app:errorEnabled="true"
             app:errorIconDrawable="@null"
             app:layout_constraintBottom_toTopOf="@+id/Ccpa_radiogroup_options"
@@ -119,7 +119,7 @@
                 android:id="@+id/ccpa_email_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:text="@={formViewModel.email}"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -137,7 +137,7 @@
 
             <RadioButton
                 android:id="@+id/Ccpa_radiogroup_option_get_data"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Get my data" />
 
@@ -149,7 +149,7 @@
 
             <RadioButton
                 android:id="@+id/Ccpa_radiogroup_option_delete_data"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Delete my data" />
 
@@ -161,7 +161,7 @@
 
             <RadioButton
                 android:id="@+id/Ccpa_radiogroup_option_sell_data"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Do not sell my data" />
 
